[package]
name = "vgburl"
version = "0.1.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "A simple personal URL shortener backend."
homepage = "https://vgburl.shuttleapp.rs"
repository = "https://github.com/valentinegb/vgburl"
license = "MIT"
publish = false

[dependencies]
actix-web = "4.3.1"
nanoid = "0.4.0"
shuttle-actix-web = "0.20.0"
shuttle-persist = "0.20.0"
shuttle-runtime = "0.20.0"
tokio = "1.26.0"
